Añadida carpeta tests, con evaluaciones de muestra. Solución de bug relacionados con la elección de las preguntas

--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -133,9 +133,9 @@ li {
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-dark-grey w3-card" id="myNavbar">
-    <a href="#home" class="w3-bar-item w3-button w3-wide">
+    <a href="#home" class="w3-bar-item w3-button" style="width: 30%">
       
-      <img src="{{url_for('static', filename='zigmap.png')}}" alt="" style="width: 3.5%"> GENERADOR</a>
+      <img src="{{url_for('static', filename='zigmap.png')}}" alt="" style="width: 4%"> GENERADOR</a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="home" class="w3-bar-item w3-button"><i class="fa fa-home"></i> HOME</a>
