--- a/templates/preguntas.html
+++ b/templates/preguntas.html
@@ -65,8 +65,8 @@
         </fieldset>
 
         <p>Generar con:</p>
-        <input type="radio" name="generate" value="pdfkit" checked> PDFKit<br>
-        <input type="radio" name="generate" value="latex" > LaTex<br>
+        <input type="radio" name="generate" value="pdfkit" checked> PDFKit [Recomendado]<br>
+        <input type="radio" name="generate" value="latex" > LaTex [Necesita distribución de LaTeX]<br>
 
         <fieldset>
 
