--- a/templates/pruebas.html
+++ b/templates/pruebas.html
@@ -12,6 +12,10 @@
 
 <main>
 
+    {%if pruebasCont == 0%}
+        <h4 style="text-align: center">Aún no hay pruebas generadas</h2>
+    {%endif%}
+
     {%for prueba in listaPruebas%}
         <div class="w3-panel">
                 <div class="w3-row-padding" style="margin:0 -16px">
