--- a/templates/disponibles.html
+++ b/templates/disponibles.html
@@ -1,6 +1,6 @@
 
 {% extends "base_template.html" %}
-{% block title %}Generador{% endblock %}
+{% block title %}Preguntas disponibles{% endblock %}
 {% block content %}
   
 
