--- a/templates/help.html
+++ b/templates/help.html
@@ -1,5 +1,5 @@
 {% extends "base_template.html" %}
-{% block title %}Generador{% endblock %}
+{% block title %}Ayuda{% endblock %}
 {% block content %}
 
 <style>
