--- a/templates/newQuestion.html
+++ b/templates/newQuestion.html
@@ -1,6 +1,6 @@
 
 {% extends "base_template.html" %}
-{% block title %}Generador{% endblock %}
+{% block title %}Nueva pregunta{% endblock %}
 {% block content %}
 
 <!--nombreAsig, nuevoNiv, nuevoTiempo, nuevoTipo, nuevoCont, nuevaFecha, nuevaUnidad, nuevaSolucion-->
