--- a/templates/result.html
+++ b/templates/result.html
@@ -1,5 +1,5 @@
 {% extends "base_template.html" %}
-{% block title %}Registro de usuarios{% endblock %}
+{% block title %}Resultados{% endblock %}
 {% block content %}
 
 <br>
