--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -1,5 +1,5 @@
 {% extends "base_template.html" %}
-{% block title %}Generador{% endblock %}
+{% block title %}Sobre{% endblock %}
 {% block content %}
 
 <style>
