mejoras visuales en home

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,27 @@
 {% extends "base_template.html" %}
 {% block title %}Generador{% endblock %}
 {% block content %}
+
+<style>
+
+main {
+  background-color: rgb(219, 216, 226);
+  margin-left: auto;
+  margin-right: auto;
+
+  width: 380px;
+
+  margin-top:2%;
+  border-radius: 20px;
+
+  padding-left: 3%;
+  padding-right: 3%;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  
+}
+
+</style>
   
 <br>
 <hr>
