mejoras en ubuntu

--- a/templates/home.html
+++ b/templates/home.html
@@ -83,7 +83,7 @@ main {
            
         </fieldset>
         
-        <fieldset>
+        <fieldset style="margin-bottom: -35px;">
           
           <legend class="subtitle">CURSO</legend>
           
@@ -99,6 +99,9 @@ main {
             </div>
           
           </div>
+
+        </fieldset>
+          <fieldset style="padding-top: -60px;">
           
           <legend class="subtitle">PRUEBA</legend>
           
